# browseterm-storage

./: README.md  pyproject.toml
browseterm_storage/: storage.py
src/browseterm_storage/: __init__.py  storage.py
tests/: __init__.py  test_localpvc_storage.py  test_minio_storage.py
